modif archi pages html

--- a/jeu.html
+++ b/jeu.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Squid Game</title>
+    <title>jeu</title>
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="/squid">Page d'accueil</a></li>
-            <li><a href="/jeu" id ="launcher" >Testez vos chances de survie</a></li>
             <li><a href="/inscription" >Inscription des Recrues</a></li>
         </ul>
     </nav>
@@ -20,16 +19,12 @@
     <h1>Squid Game</h1>
     <h2>Qui survivra le plus longtemps ?</h2>
 <p>Prêt pour un duel mortel ? Identifie-toi si tu l'oses ...</p>
-<form action="/login" method="POST">
-    <label for="email-log">E-mail</label>
-    <input type="email" id="email-log" name="email-log" required>
-    <label for="password-log">Mot de passe : </label>
-    <input type="password" id="password-log" name="password-log" required>
-    <button type="submit">Obéir</button>
-</form>
 
 
-<div id="centre"></div>
+
+<div>
+    <p>game here</p>
+</div>
 
 <script src="/socket.io/socket.io.min.js"></script>
 <script src="/js/index.js"></script>
